# countdoom

./: .all-contributorsrc  .bandit  .bumpversion.cfg  .codeclimate.yml  .coveragerc  .deepsource.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  no-response.yml
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md  QUESTION.md  USER_STORY.md
countdoom/: __init__.py  __main__.py  cli.py  client.py
docs/: Makefile  conf.py  countdoom.rst  doomsday_clock.rst  index.rst  indices.rst  installation.rst  make.bat  modules.rst  readme.rst  usage.rst
doomsday_clock/: __init__.py  __main__.py  cli.py  client.py  doomsday_clock.py
examples/: example.py
tests/: test_cli.py  test_client.py  test_package.py
